# medkit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  hatch.toml  pyproject.toml
.github/workflows/: docs.yaml  lint.yaml  pre-commit.yaml  release.yaml  test.yaml
docs/: _config.yml  _toc.yml  changelog.md  conf.py  index.md
docs/api/: audio.md  core.md  core_text.md  io.md  text.md  training.md
docs/cookbook/: brat_io.md  cleaning_text.md  detecting_text_duplicates.md  finetuning_hf_model.md  iamsystem.md  ontotox.md
docs/cookbook/drug_ner_eval/: index.md  pipeline.md
docs/cookbook/ner_benchmark/: data_loading.md  evaluation.md  fine_tuning.md  index.md  ner_evaluation.md  preprocessing.md  training.md
docs/cookbook/spacy/: index.md  spacy_pipeline.md
docs/data/: bdpm.csv
docs/data/mtsamplesfr/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
docs/data/text/: 1-EN-version.txt
docs/examples/: audio_dataset_metrics.md  audio_transcription.md  brat_io.md  cleaning_text.md  custom_text_operation.md  dataset_loader.md  edsnlp.md  fine_tuning.md  finetuning_hf_model.md  ontotox.md  spans.md
docs/examples/ner_evaluation/: config_gpt3.cfg  config_gpt4.cfg  examples.json  ner_evalution.md
docs/examples/spacy/: index.md  spacy_io.md  spacy_pipeline.md
docs/examples/text_segmentation/: document.md  index.md  section.md  syntagma.md
docs/reference/: audio.md  core_audio.md  core_text.md  io.md  text.md  tools.md  training.md
docs/tutorial/: context_detection.md  entity_matching.md
docs/tutorial/text_segmentation/: index.md  section.md
docs/user_guide/: context_detection.md  entity_matching.md  first_steps.md  install.md  module.md  pipeline.md  provenance.md
medkit/: __init__.py  _compat.py  _import.py
medkit/audio/metrics/: __init__.py  diarization.py  transcription.py
medkit/audio/preprocessing/: __init__.py  downmixer.py  power_normalizer.py  resampler.py
medkit/audio/segmentation/: __init__.py  pa_speaker_detector.py  webrtc_voice_detector.py
medkit/audio/transcription/: __init__.py  doc_transcriber.py  hf_transcriber.py  sb_transcriber.py  transcribed_text_document.py
medkit/core/: __init__.py  _prov_graph.py  annotation.py  annotation_container.py  attribute.py  attribute_container.py  collection.py  conversion.py  data_item.py  dict_conv.py  doc_pipeline.py  document.py  id.py  operation.py  operation_desc.py  pipeline.py  prov_store.py  prov_tracer.py  store.py  utils.py
medkit/core/audio/: __init__.py  annotation.py  annotation_container.py  audio_buffer.py  document.py  operation.py  span.py
medkit/core/text/: __init__.py  annotation.py  annotation_container.py  document.py  entity_attribute_container.py  entity_norm_attribute.py  operation.py  span.py  span_utils.py  umls_norm_attribute.py  utils.py
medkit/io/: __init__.py  _brat_utils.py  _common.py  brat.py  doccano.py  rttm.py  spacy.py  srt.py
medkit/io/medkit_json/: __init__.py  _common.py  audio.py  text.py
medkit/text/: __init__.py  deid.py
medkit/text/context/: __init__.py  family_detector.py  hypothesis_detector.py  negation_detector.py
medkit/text/metrics/: __init__.py  classification.py  irr_utils.py  ner.py
medkit/text/ner/: __init__.py  _base_simstring_matcher.py  adicap_norm_attribute.py  date_attribute.py  duckling_matcher.py  edsnlp_date_matcher.py  edsnlp_tnm_matcher.py  hf_entity_matcher.py  hf_entity_matcher_trainable.py  hf_tokenization_utils.py  iamsystem_matcher.py  nlstruct_entity_matcher.py  quick_umls_matcher.py  regexp_matcher.py  simstring_matcher.py  tnm_attribute.py  umls_coder_normalizer.py  umls_matcher.py  umls_utils.py
medkit/text/postprocessing/: __init__.py  alignment_utils.py  attribute_duplicator.py  document_splitter.py  overlapping.py
medkit/text/preprocessing/: __init__.py  char_replacer.py  char_rules.py  duplicate_finder.py  eds_cleaner.py  regexp_replacer.py
medkit/text/relations/: __init__.py  syntactic_relation_extractor.py
medkit/text/segmentation/: __init__.py  rush_sentence_tokenizer.py  section_tokenizer.py  sentence_tokenizer.py  syntagma_tokenizer.py
medkit/text/spacy/: __init__.py  displacy_utils.py  doc_pipeline.py  edsnlp.py  pipeline.py  spacy_utils.py
medkit/text/translation/: __init__.py  hf_translator.py
medkit/text/utils/: decoding.py
medkit/tools/: __init__.py  _save_prov_to_dot.py  e3c_corpus.py  hf_utils.py  mtsamples.py
medkit/training/: __init__.py  callbacks.py  trainable_component.py  trainer.py  trainer_config.py  utils.py
tests/: audio_utils.py  conftest.py  data_utils.py
tests/large/: diar_pipeline_config.yaml  test_hf_entity_matcher.py  test_hf_transcriber.py  test_mtsamples.py  test_nlstruct_entity_matcher.py  test_pa_speaker_detector.py  test_sb_transcriber.py
tests/unit/audio/metrics/: test_diarization_evaluator.py  test_transcription_evaluator.py
tests/unit/audio/preprocessing/: test_downmixer.py  test_power_normalizer.py  test_resampler.py
tests/unit/audio/segmentation/: test_pa_speaker_detector.py  test_webrtc_voice_detector.py
tests/unit/audio/transcription/: test_doc_transcriber.py  test_hf_transcriber.py  test_sb_transcriber.py  test_transcribed_text_document.py
tests/unit/core/: test_annotation_container.py  test_attribute_container.py  test_collection.py  test_dict_conv.py  test_doc_pipeline.py  test_id.py  test_prov_graph.py  test_store.py
tests/unit/core/audio/: test_audio_buffer.py  test_document.py
tests/unit/io/: test__brat_utils.py  test_brat_input_converter.py  test_brat_output_converter.py  test_doccano_input_converter.py  test_doccano_output_converter.py  test_rttm_input_converter.py  test_rttm_output_converter.py  test_spacy_input_converter.py  test_spacy_output_converter.py  test_srt_input_converter.py  test_srt_output_converter.py
tests/unit/tools/: test_check_model_for_task.py  test_e3c_corpus.py  test_mtsamples.py  test_save_prov_to_dot.py
tests/unit/training/: test_batch_data.py  test_trainer.py  test_trainer_checkpoints.py  test_trainer_with_hf_model.py
(+57 files in other folders)
