[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medkit-lib"
version = "0.17.0"
description = "A Python library for a learning health system"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "HeKA Research Team" },
]
maintainers = [
  { name = "medkit maintainers", email = "medkit-maintainers@inria.fr" },
]
keywords = [
  "bert",
  "digital health",
  "ehr",
  "nlp",
  "umls",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Software Development",
]
dependencies = [
  "anyascii",
  "duptextfinder>=0.3.0",
  "flashtext>=2.7",
  "intervaltree",
  "numpy",
  "pyaml",
  "pysimstring",
  "requests",
  "smart-open",
  "soundfile",
  "tqdm",
  "typing-extensions>=4.6.0",
]

[project.optional-dependencies]
deid = [
  "presidio-analyzer >=2.2.33,<3",
]
edsnlp = [
  "edsnlp>=0.9",
]
hf-entity-matcher = [
  "torch>=2.1.1",
  "transformers>=4.21",
]
hf-transcriber = [
  "torchaudio>=2.1.1",
  "transformers>=4.21",
]
hf-translator = [
  "sacremoses",
  "sentencepiece",
  "torch>=2.1.1",
  "transformers>=4.21",
]
hf-utils = [
  "transformers>=4.21",
]
iamsystem-matcher = [
  "iamsystem>=0.6.0",
]
metrics-diarization = [
  "pyannote-core>=5.0",
  "pyannote-metrics>=3.2.0",
]
metrics-ner = [
  "seqeval>=1.2.2",
  "torch>=2.1.1",
  "transformers>=4.21",
]
metrics-text-classification = [
  "scikit-learn>=1.3.2",
]
metrics-transcription = [
  "speechbrain>=1.0",
]
nlstruct = [
  "huggingface-hub",
  "nlstruct>=0.2",
  "torch>=2.1.1",
]
pa-speaker-detector = [
  "pyannote-audio>=3.1",
  "torch>=2.1.1",
]
quick-umls = [
  "packaging",
  "quickumls>=1.4; python_version<'3.12'",
]
resampler = [
  "resampy>=0.4",
]
rush-sentence-tokenizer = [
  "PyRush>=1.0; python_version<'3.12'",
]
sb-transcriber = [
  "speechbrain>=0.5",
  "torch>=2.1.1",
  "transformers>=4.21",
]
spacy = [
  "spacy>=3.4",
]
srt-io-converter = [
  "pysrt>=1.1.2",
]
syntactic-relation-extractor = [
  "spacy>=3.4",
]
training = [
  "torch>=2.1.1",
]
umls-coder-normalizer = [
  "feather-format>=0.4",
  "pandas>=1.4",
  "torch>=2.1.1",
  "transformers>=4.21",
]
webrtc-voice-detector = [
  "webrtcvad>=2.0",
]
all = [
  """medkit-lib[\
    deid,\
    edsnlp,\
    hf-entity-matcher,\
    hf-transcriber,\
    hf-translator,\
    hf-utils,\
    iamsystem-matcher,\
    metrics-diarization,\
    metrics-ner,\
    metrics-text-classification,\
    metrics-transcription,\
    nlstruct,\
    pa-speaker-detector,\
    quick-umls,\
    resampler,\
    rush-sentence-tokenizer,\
    sb-transcriber,\
    spacy,\
    srt-io-converter,\
    syntactic-relation-extractor,\
    training,\
    umls-coder-normalizer,\
    webrtc-voice-detector]""",
]
docs = [
  "myst-nb",
  "numpydoc",
  "pandas",
  "sphinx",
  "sphinx-autoapi",
  "sphinx-autobuild",
  "sphinx-book-theme",
  "sphinx-design",
  "sphinxcontrib-mermaid",
]

[project.urls]
Changelog = "https://medkit.readthedocs.io/en/stable/changelog.html"
Documentation = "https://medkit.readthedocs.io"
Issues = "https://github.com/medkit-lib/medkit/issues"
Source = "https://github.com/medkit-lib/medkit"

[tool.coverage.run]
source_pkgs = ["medkit", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
medkit = ["medkit", "*/medkit/medkit"]
tests = ["tests", "*/medkit/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
files = ["medkit"]
disable_error_code = ["import-not-found", "import-untyped"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = [
  "--cov=medkit",
  "--cov-report=term-missing:skip-covered",
]

[tool.ruff]
line-length = 120
indent-width = 4
src = ["medkit", "tests"]

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # pycodestyle
  "W",
  "E",
  # isort
  "I",
  # pep8-naming
  "N",
  # pydocstyle
  "D",
  # pyupgrade
  "UP",
  # flake8-bandit
  "S",
  # flake8-blind-except
  "BLE",
  # flake8-boolean-trap
  #"FBT",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-commas
  "COM",
  # flake8-comprehensions
  "C4",
  # flake8-errmsg
  "EM",
  # flake8-future-annotations
  "FA",
  # flake8-implicit-str-concat
  "ISC",
  # flake8-import-conventions
  "ICN",
  # flake8-logging-format
  "G",
  # flake8-pie
  "PIE",
  # flake8-pyi
  "PYI",
  # flake8-pytest-style
  "PT",
  # flake8-quotes
  "Q",
  # flake8-raise
  "RSE",
  # flake8-return
  "RET",
  # flake8-slots
  "SLOT",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # flake8-type-checking
  "TCH",
  # flake8-unused-arguments
  #"ARG",
  # flake8-use-pathlib
  "PTH",
  # pandas-vet
  "PD",
  # Pylint
  "PL",
  # tryceratops
  "TRY",
  # NumPy-specific rules
  "NPY",
  # Perflint
  "PERF",
  # Ruff-specific rules
  "RUF",
]
ignore = [
  # missing-trailing-comma
  "COM812",
  # Missing docstring in public module
  "D100",
  # Missing docstring in public class
  "D101",
  # Missing docstring in public method
  "D102",
  # Missing docstring in public function
  "D103",
  # Missing docstring in public package
  "D104",
  # Missing docstring in magic method
  "D105",
  # single-line-implicit-string-concatenation
  "ISC001",
  # too many branches, arguments, statements...
  "PLR09",
  # assert
  "S101",
]
unfixable = [
  # unused-import
  "F401",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true

[tool.ruff.lint.isort]
known-first-party = ["medkit"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"medkit/core/id.py" = ["S311"]
"medkit/io/_brat_utils.py" = ["A001", "A002", "A003"]
"medkit/io/doccano.py" = ["A003"]
"medkit/text/context/family_detector.py" = ["A003"]
"medkit/text/context/hypothesis_detector.py" = ["A003"]
"medkit/text/context/negation_detector.py" = ["A003"]
"medkit/text/ner/regexp_matcher.py" = ["A003"]
"medkit/tools/e3c_corpus.py" = ["A003", "S314"]
"medkit/training/trainer.py" = ["NPY002"]
"tests/unit/text/ner/test_nlstruct_entity_matcher.py" = ["A003"]
"tests/**" = ["A003", "E402", "D", "PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.licensecheck]
using = "PEP631"
ignore_packages = [
  "pysimstring",  # BSD-3-Clause
]

[tool.commitizen]
name = "cz_pydata"
version_provider = "pep621"
update_changelog_on_bump = true
bump_message = "REL: Release version $new_version"
changelog_start_rev = "0.12.0"
major_version_zero = true
